# boundary-compensation

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.txt  README.md  START_BC_ORIGIN_WINDOWS.bat  pyproject.toml
bc-Layers/: BC-Layers-I-readout-demo-ru.html
bc-emergence/: BC-Emergence-I-Certified-Incidence-Lab.html  BC-Emergence-II-Gluing-Topological-Shadow-Lab-ru.html  BC-Emergence-III-Witness-Depth-Lab-en.html  BC-Emergence-IV-Robust-Witness-Universality-Lab-en.html  BC-Emergence-V-Transfer-Capacity-Lab-en.html  BC-Emergence-VI-Coupled-Rate-Distortion-Lab-en.html  BC-Emergence-VII-Conditional-Synergy-Lab-bilingual.html
bc-layers/: BC-Layers-II-interactive-lab-en.html  BC-Layers-II-interactive-lab-ru.html  BC-Layers-III-sufficiency-lab-en.html  BC-Layers-III-sufficiency-lab-ru.html  BC-Layers-IV-hidden-sector-lab-en.html  BC-Layers-IV-hidden-sector-lab-ru.html  BC-Layers-Programme-Synthesis-v0.1.1-reviewed-clean.md
bc-m/: BC-M-D1-Jacobi-Fiber-Scanner-v0.1.1.html  BC-M-D2-Poincare-Proof-Channel-Atlas-Lab-v0.1.1-en.html  BC-M-D3-Graph-Reconstruction-Laboratory-v0.1.1-en.html  BC-M-D4-Proof-Dependency-Atlas-Lab-v0.1.1-en.html  BC-M-II-Lift-Tower-Lab-v0.1.1-en.html  BC-M-III-Exclusion-Geometry-Lab-v0.1.1-en.html  BC-M-IV-Finite-Resolution-Geometry-Lab-v0.1.1-en.html  BC-M-V-Probe-Completion-Lab-v0.1.1-en.html  BC-M-VI-Proof-Channel-Geometry-Lab-v0.1.1-en.html  BC-M-VII-Identification-Games-Lab-v0.1.1-en.html  README_BC-M-III.md
bc_academy/: BC-Academy-I-Lecture-03-Kernel-Explorer-v0.1.0-ru.html  BC-Academy-I-Lecture-04-Near-Zero-Gap-Explorer-v0.1.0-en.html  README.md  (+3 more)
(+529 files in other folders)
